--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 0/12 * *"
 
 jobs:
   update-readme:
@@ -13,4 +13,4 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_TIME: false
+          SHOW_TIME: true
